--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Alban Campoverde Douglas</title>
 </head>
 <body>
-    <h1>Curriculum Vitae</h1>
+   <div #pag = "principal" >
+    <img src="logoUG.jpg" alt="logo" width="150" alig = "left">
     <h2>Douglas Jair Alban Campoverde</h2>
+
+   </div>
+   
+
 </body>
 </html>
