--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alban Campoverde Douglas</title>
-</head>
-<body>
-   <div #pag = "principal" >
-    <img src="logoUG.jpg" alt="logo" width="150" alig = "left">
-    <h2>Douglas Jair Alban Campoverde</h2>
 
-   </div>
-   
+    <link rel="stylesheet" href="style.css">
+
+    <title>Curriculum</title>
+</head>
+
+<body>
+    <div class="principal">
+
+
+
+        
+        <center>
+        <img src="foto.jpg" alt="logo" width="200" alig="left">
+        <h2>Douglas Jair Alban Campoverde</h2>
+        </center>
+
+        <br>
+
+        <fieldset>
+            <legend>Informacion personal</legend>
+            <li>Cedula de ciudadania: 0951654037</li>
+            <li>Tipo de sangre: A+</li>
+
+
+        </fieldset>
+
+        <fieldset>
+            <legend>Contacto</legend>
+            <li>Telefono: 0993123601</li>
+            <li>Correo electronico: jairalbanc@ug.edu.ec</li>
+            <li>Red social: jairalban_70</li>
+        </fieldset>
+
+        <fieldset>
+            <legend>Perfil</legend>
+            <ul>Soy un estudiante de la Universidad de Guayaquil, actualmente me encuentro cursando el cuarto semestre
+                de la carrera de ingenieria en Sistema de Informacion, me considero una persona sencilla, amable,
+                respetuosa y puntual.
+                Me gradue de bachillerato tecnico en electricidad en el colegio Tecnico Simon Bolivar, obteniendo muy
+                buenas calificaciones y con
+                promedios muy buenos, mis practicas profesionales las realice en MABE Ecuador, especificamente en el
+                area de control de calidad.
+                Adicionalmente cuento con licencia tipo B, para poder manejar automoviles y camionetas.</ul>
+        </fieldset>
+
+        <fieldset>
+            <legend>Formacion</legend>
+            <li>Educacion basica: Escuela fiscal Matilde Hidalgo de Procel</li>
+            <li>Bachillerato: Colegio Tecnico Simon Bolivar</li>
+            <li>Universidad: Actualmente cursando cuarto semestre de Ingenieria en Sistema de Informacion</li>
+            <li>Certificado: Tecnico certificado en deteccion y sistema de alarma contra incendio</li>
+        </fieldset>
+
+        <fieldset>
+            <legend>Experiencia</legend>
+            <ul>A lo largo de estos años me eh desempeñado en el area de seguridad electronica especificamente en
+                instalacion de camaras de video vigilancia
+                y sistemas de alarma contra robo e incendio.
+                Contando con la experiencia de 5 años de la mano del señor Douglas Alban Mejia con RUC: 0915829949001,
+                el cual se a dedicado a esta profesion toda su vida laboral
+
+            </ul>
+        </fieldset>
+    </div>
+
+
 
 </body>
+
 </html>
